--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
+    <title>javascript con html</title>
 </head>
 <body>
+    <h1 class="titulo"> El titulo</h1>
+    <p>UN texto luego del <strong>titulo</strong></p>
     
 </body>
 </html>
