--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
     <title>javascript con html</title>
+
 </head>
 <body>
-    <h1 class="titulo"> El titulo</h1>
+    <h1 class="titulo"> El titulo es aqui</h1>
     <p>UN texto luego del <strong>titulo</strong></p>
+
     
 </body>
 </html>
