codigo base de piedra papel o tijera listo

--- a/index.html
+++ b/index.html
@@ -4,20 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-    <title>javascript con html</title>
-<<<<<<< HEAD
+    <title>Piedra pepel o tijera</title>
+    <script>
+
+        //1 es piedra 2 es papel 3 es tijera
+        let jugador = 0
+        let pc = 1
+        jugador = prompt ("elige 1 piedra, 2 papel, 3 tijera")
+
+       if(jugador ==1){
+        alert("Elegiste piedra")
+       } else if(jugador ==2){
+        alert("Elegiste papel")
+       } else if(jugador ==3){
+        alert("Elegiste tijera")
+       }else{
+        alert("Elegirste perder")
+       }
+            
+    </script>
 
 </head>
-<body>
-    <h1 class="titulo"> El titulo es aqui</h1>
-    <p>UN texto luego del <strong>titulo</strong></p>
 
-=======
-</head>
 <body>
-    <h1 class="titulo"> El titulo</h1>
+    <h1 class="titulo">Piedra papel o tijera</h1>
     <p>UN texto luego del <strong>titulo</strong></p>
->>>>>>> 706945ce3a6ab93d5f4fbb38621f8f1e53a36575
     
 </body>
 </html>
