--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <title>Piedra pepel o tijera</title>
     <script>
 
+
+function aleatorio (min, max){
+    return Math.floor(Math.random()*(max-min)+min)
+}
+
         //1 es piedra 2 es papel 3 es tijera
         let jugador = 0
-        let pc = 1
+        let min = 1
+        let max = 3
+        let pc = aleatorio
         jugador = prompt ("elige 1 piedra, 2 papel, 3 tijera")
 
        if(jugador ==1){
