--- a/index.html
+++ b/index.html
@@ -8,35 +8,39 @@
     <script>
 
 
+
+
 function aleatorio (min, max){
     return Math.floor(Math.random()*(max-min)+min)
+}
+
+function eleccion (jugada){
+    let resultado = ""
+
+        if(jugada == 1){
+            resultado= "Piedra 🗿"
+        } else if(jugada == 2){
+            resultado= "Papel 🧻"
+        } else if(jugada == 3){
+            resultado= "Tijera ✂️"
+        }else{
+            alert("MAL ELEGIDO")
+        }
+
+        return resultado
 }
 
         //1 es piedra 2 es papel 3 es tijera
         let jugador = 0
         let min = 1
         let max = 3
-        let pc = aleatorio
+        let pc = aleatorio (1,3)
         jugador = prompt ("elige 1 piedra, 2 papel, 3 tijera")
 
-       if(jugador ==1){
-        alert("Elegiste 🗿")
-       } else if(jugador ==2){
-        alert("Elegiste 🧻")
-       } else if(jugador ==3){
-        alert("Elegiste ✂️")
-       }else{
-        alert("Elegirste perder")
-       }
 
-       if(pc ==1){
-        alert("Pc elige 🗿")
-       } else if(jugador ==2){
-        alert("Pc elige 🧻")
-       } else if(jugador ==3){
-        alert("Pc elige ✂️")
-       }
 
+       alert("PC elige: " + eleccion(pc))
+       alert ("Tu eliges: " + eleccion(jugador))
        //COMBATE
        //encontrar todas las maneras en que se pueden ganar
 
