--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ function eleccion (jugada){
         } else if(jugada == 3){
             resultado= "Tijera ✂️"
         }else{
-            alert("MAL ELEGIDO")
+            resultado = "MAL ELEGIDO"
         }
 
         return resultado
@@ -32,8 +32,15 @@ function eleccion (jugada){
 
         //1 es piedra 2 es papel 3 es tijera
         let jugador = 0
-        let min = 1
-        let max = 3
+
+        let triunfos = 0
+        let perdidas = 0
+
+
+
+        while (triunfos <3 &&perdidas <3){
+
+
         let pc = aleatorio (1,3)
         jugador = prompt ("elige 1 piedra, 2 papel, 3 tijera")
 
@@ -44,17 +51,25 @@ function eleccion (jugada){
        //COMBATE
        //encontrar todas las maneras en que se pueden ganar
 
-       if(jugador==pc){
+       if(pc==jugador){
         alert("Empate")
-       } else if (jugador==1 & pc == 3){
+       } else if (jugador==1 && pc == 3){
         alert("Ganaste")
-       } else if (jugador == 2 & pc == 1){
+        triunfos = triunfos +1
+       } else if (jugador == 2 && pc == 1){
         alert("Ganaste")
-       } else if (jugador == 3 & pc == 2){
+        triunfos = triunfos +1
+       } else if (jugador == 3 && pc == 2){
         alert("Ganaste")
+        triunfos = triunfos +1
        }else {
         alert ("Perdiste")
+        perdidas=perdidas+1
        }
+
+    }
+
+    alert("Ganaste " + triunfos + " veces. Perdiste " + perdidas + " veces.")
             
     </script>
 
